<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.forcetechsoft.financeplanner.view.Timesheet">

    <LinearLayout
        android:id="@+id/linearLayoutforTitle3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/window_title_search_configuration"
            android:id="@+id/textView" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutforButtons3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearLayoutforTitle3"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_search_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="searchLocation"
            android:text="@string/search_user_location_title" />

        <Button
            android:id="@+id/button_search_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="searchContact"
            android:text="@string/search_contacts_title" />

        <Button
            android:id="@+id/button_search_social_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="searchSocialContact"
            android:text="@string/search_social_title" />

    </LinearLayout>

</RelativeLayout>
