<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.sharesoft.share.ShareOptions">

    <LinearLayout
        android:id="@+id/linearLayoutforTitle2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutforButtons2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearLayoutforTitle2"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/share_user_location_title"
            android:id="@+id/textView1"
            android:layout_gravity="center_horizontal" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


        <RadioGroup
            android:layout_width="0dp"
            android:layout_weight="5"
            android:id="@+id/radioGroupLocation"
            android:layout_height="wrap_content">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_btn_free"
                android:id="@+id/radioButtonFreeLocation" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_btn_ask"
                android:id="@+id/radioButtonAskLocation" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_btn_pay"
                android:layout_weight="5"
                android:id="@+id/radioButtonShareLocationFor" />

        </RadioGroup>

            <NumberPicker
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:id="@+id/locationSharePrice"
                android:layout_gravity="bottom"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/textView4"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/share_contacts_title"
            android:id="@+id/textView2"
            android:layout_gravity="center_horizontal" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <RadioGroup
            android:layout_width="0dp"
            android:layout_weight="5"
            android:id="@+id/radioGroupContacts"
            android:layout_height="wrap_content">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_btn_free"
            android:id="@+id/radioButtonFreeContact" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_btn_ask"
            android:id="@+id/radioButtonAskContact" />


        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="@string/radio_btn_pay"
            android:id="@+id/radioButtonShareContactFor" />

        </RadioGroup>

            <NumberPicker
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:id="@+id/contactSharePrice"
                android:layout_gravity="bottom"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/textView5"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/share_social_title"
            android:id="@+id/textView3"
            android:layout_gravity="center_horizontal" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <RadioGroup
            android:layout_width="0dp"
            android:layout_weight="5"
            android:id="@+id/radioGroupSocialContacts"
            android:layout_height="wrap_content">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_btn_free"
            android:id="@+id/radioButtonFreeSocial" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_btn_ask"
            android:id="@+id/radioButtonAskSocial" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_btn_pay"
            android:layout_weight="5"
            android:id="@+id/radioButtonShareSocialFor" />

            </RadioGroup>

            <NumberPicker
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:id="@+id/contactShareSocialPrice"
                android:layout_gravity="bottom"/>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="APPLY CHANGES"
        android:id="@+id/button_apply_sharing_settings"
        android:layout_alignParentBottom="true"
        android:onClick="applyNewSettings"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="CANCEL CHANGES"
        android:id="@+id/button_cancel_sharing_activitu"
        android:layout_alignTop="@+id/button_apply_sharing_settings"
        android:onClick="dontApplyAnySetting"
        android:layout_alignParentEnd="true" />


</RelativeLayout>
